Bug 44534 - EDITING: Connectors cannot be selected
Summary: EDITING: Connectors cannot be selected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.4.2 release
Hardware: All All
: medium major
Assignee: David Tardon
URL:
Whiteboard: BSA target:3.7.0 target:3.6.0 target:...
Keywords:
: 37821 45772 50314 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-06 08:49 UTC by pafal
Modified: 2012-07-24 09:20 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pafal 2012-01-06 08:49:47 UTC
Problem description:
The connector cannot be selected after it's end is moved. 

Steps to reproduce:
1. Start LibO Draw
2. Select any connector and place it from left to right to the drawing space.
3. Move the left endpoint to right that way the left endpoint x coordinate is greater than right endpoint coordinate.
4. click to the empty space to unselect the connector
5. click to the connector to select it again (imposible)
6. click and drag the mouse to create selection bounding box to cover and select the connector (impossible).
7. Stop being annoyed and save/reload the document, the connector can be selected again, until one end is moved "wrongly". It works also for y coordinate and any direction.
8. Please note in the case the bounding box covers ORIGINAL connector placement (although there is no more connector but empty space), the connector can be selected. But it's not so practical to remember original positions of all connectors in time...

Current behavior:
see above

Expected behavior:
Be able to select any connector which endpoints are moved in any direction...

Platform (if different from the browser): 
I guess it's platform independent, but experienced on Win7 64b.
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:8.0) Gecko/20100101 Firefox/8.0

In the case any donation would speed up the fix of this bug, please let me know, I hate it and would appreciate the normal operation again...

Thank you.

Regards
    Pafal
Comment 1 HolgerManthey 2012-03-29 00:00:57 UTC
I have the same problem with version 3.5.1.2, Win7.

It really makes working with LibO Draw using connector lines a pain.
Comment 2 sasha.libreoffice 2012-05-05 02:37:32 UTC
Thanks for bugreport
reproduced in 3.3.4 and 3.5.3 on Fedora 64 bit
Changing version to 3.3.4 as most early reproducible
Comment 3 sasha.libreoffice 2012-05-05 02:39:30 UTC
@ Radek
What do You think about this bug?
Comment 4 David Tardon 2012-07-17 11:53:02 UTC
the bound rectangle of the connector must be invalidated when the connector's path is changed
Comment 5 Not Assigned 2012-07-17 12:14:05 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b480f91968a3df16a655585fba494425aea725dc

fdo#44534 invalidate bound rect after drag&drop
Comment 6 David Tardon 2012-07-17 12:24:23 UTC
*** Bug 50314 has been marked as a duplicate of this bug. ***
Comment 7 David Tardon 2012-07-17 12:36:05 UTC
*** Bug 45772 has been marked as a duplicate of this bug. ***
Comment 8 David Tardon 2012-07-17 12:46:09 UTC
*** Bug 37821 has been marked as a duplicate of this bug. ***
Comment 9 sasha.libreoffice 2012-07-20 12:20:58 UTC
Thanks for fixing this bug
Comment 10 Not Assigned 2012-07-23 22:15:59 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5eb88ff59e1e8c54814c276c8dccf74bf892cd9&g=libreoffice-3-6

fdo#44534 invalidate bound rect after drag&drop


It will be available in LibreOffice 3.6.1.
Comment 11 Not Assigned 2012-07-23 22:23:55 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=85938bedc9aaee91e20794c94aa8d7665273b21f&g=libreoffice-3-5

fdo#44534 invalidate bound rect after drag&drop


It will be available in LibreOffice 3.5.6.
Comment 12 Not Assigned 2012-07-24 09:20:50 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=69c56d4a4b82a0caed34373e3a574602b35aa62d&g=libreoffice-3-6-0

fdo#44534 invalidate bound rect after drag&drop


It will be available already in LibreOffice 3.6.0.