fdo#44534 invalidate bound rect after drag&drop

Change-Id: Ie3319870ae26e9e2cac32641a33be62e4e020c02
(cherry picked from commit b480f91968a3df16a655585fba494425aea725dc)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>